[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/TitleTheme.tres" type="Theme" id=1]
[ext_resource path="res://Dealer/DealerCard.gd" type="Script" id=2]
[ext_resource path="res://Assets/Images/PlayerButton.svg" type="Texture" id=3]
[ext_resource path="res://Dealer/DealerMarginContainer.gd" type="Script" id=4]
[ext_resource path="res://Assets/Images/Player_Button_Active.svg" type="Texture" id=5]

[node name="Dealer" type="Node"]
script = ExtResource( 2 )

[node name="ColorRectBackground" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.709804, 0.709804, 0.709804, 1 )

[node name="DealerMarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 50.0
margin_top = 50.0
margin_right = -50.0
margin_bottom = -50.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 4 )

[node name="DealerButtonContainer" type="VBoxContainer" parent="DealerMarginContainer"]
margin_right = 980.0
margin_bottom = 1820.0
size_flags_horizontal = 5
size_flags_vertical = 5

[node name="PlayerButton" type="TextureButton" parent="DealerMarginContainer/DealerButtonContainer"]
margin_right = 980.0
margin_bottom = 201.0
action_mode = 0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 5 )

[node name="CardCenter" type="CenterContainer" parent="DealerMarginContainer"]
margin_left = 490.0
margin_top = 910.0
margin_right = 490.0
margin_bottom = 910.0
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="CardSort" type="YSort" parent="DealerMarginContainer/CardCenter"]
position = Vector2( 0, -205 )

[node name="DealerScore" type="Label" parent="DealerMarginContainer"]
margin_top = 1721.0
margin_right = 980.0
margin_bottom = 1820.0
size_flags_horizontal = 5
size_flags_vertical = 12
theme = ExtResource( 1 )
text = "Score: 18"
align = 1
valign = 1

[connection signal="pressed" from="DealerMarginContainer/DealerButtonContainer/PlayerButton" to="." method="_on_PlayerButton_pressed"]
